Add some translations

--- a/l10n/po/ja_JP/_guides/gcp-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/gcp-functions-http.adoc.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-10-06 08:08+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-15 00:05+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -55,7 +55,6 @@ msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions-http.adoc:24
-#, fuzzy
 msgid "JDK 11 (Google Cloud Functions requires JDK 11)"
 msgstr "JDK 11 (Google Cloud Functions は JDK 11 が必要です)"
 
@@ -66,15 +65,13 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions-http.adoc:26
-#, fuzzy
 msgid "https://cloud.google.com/[A Google Cloud Account].  Free accounts work."
-msgstr "link:https://cloud.google.com/[Googleクラウドのアカウントです] 。無料アカウントの仕事。"
+msgstr "link:https://cloud.google.com/[Google Cloudのアカウント] 。無料アカウントでも大丈夫です。"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions-http.adoc:27
-#, fuzzy
 msgid "https://cloud.google.com/sdk[Cloud SDK CLI Installed]"
-msgstr "link:https://cloud.google.com/sdk[クラウドSDK CLIがインストールされている]"
+msgstr "link:https://cloud.google.com/sdk[Cloud SDK CLIがインストールされていること]"
 
 #. type: Title ==
 #: upstream/_guides/gcp-functions-http.adoc:28
@@ -107,7 +104,7 @@ msgstr "ソリューションは `google-cloud-functions-http-quickstart` {quick
 
 #. type: Title ==
 #: upstream/_guides/gcp-functions-http.adoc:40
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven Deployment Project"
 msgstr "Maven デプロイメントプロジェクトの作成"
 
@@ -131,13 +128,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/gcp-functions-http.adoc:55
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Login to Google Cloud"
-msgstr "Googleクラウドにログイン"
+msgstr "Google Cloudにログイン"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions-http.adoc:58
-#, fuzzy
 msgid "Login to Google Cloud is necessary for deploying the application and it can be done as follows:"
 msgstr "アプリケーションのデプロイにはGoogle Cloudへのログインが必要で、以下のように行います。"
 
@@ -149,7 +145,7 @@ msgstr "gcloud auth login\n"
 
 #. type: Title ==
 #: upstream/_guides/gcp-functions-http.adoc:64
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the endpoints"
 msgstr "エンドポイントの作成"
 
@@ -167,7 +163,7 @@ msgstr "各タイプのエンドポイントが不要な場合は、対応する
 
 #. type: Title ===
 #: upstream/_guides/gcp-functions-http.adoc:71
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The JAX-RS endpoint"
 msgstr "JAX-RS エンドポイント"
 
@@ -213,9 +209,9 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/gcp-functions-http.adoc:91
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The Servlet endpoint"
-msgstr "サーブレットのエンドポイント"
+msgstr "サーブレットエンドポイント"
 
 #. type: delimited block -
 #: upstream/_guides/gcp-functions-http.adoc:96
@@ -264,9 +260,9 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/gcp-functions-http.adoc:122
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The Reactive Routes endpoint"
-msgstr "サーブレットのエンドポイント"
+msgstr "Reactive Routesエンドポイント"
 
 #. type: delimited block -
 #: upstream/_guides/gcp-functions-http.adoc:127
@@ -297,7 +293,7 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/gcp-functions-http.adoc:140
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The Funqy HTTP endpoint"
 msgstr "Funqy HTTP エンドポイント"
 
@@ -321,9 +317,9 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/gcp-functions-http.adoc:154
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Build and Deploy to Google Cloud"
-msgstr "Google クラウドへの構築とデプロイ"
+msgstr "ビルドとGoogle Cloudへのデプロイ"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions-http.adoc:157
