--- a/l10n/po/ja_JP/_guides/gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_guides/gcp-functions.adoc.po
@@ -3,28 +3,27 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-08-31 13:17+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-15 00:02+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/gcp-functions.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Google Cloud Functions (Serverless)"
+#, no-wrap
 msgid "Google Cloud Functions (Serverless)"
-msgstr "Google Cloud Functions (サーバーレス実行環境)"
+msgstr "Google Cloud Functions (サーバーレス)"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:13
@@ -433,10 +432,8 @@ msgstr "前のコマンドの結果、 `target/deployment` リポジトリ内に
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:218
-#, fuzzy
-#| msgid "Then you will be able to use `gcloud beta functions deploy` command to deploy your function to Google Cloud."
 msgid "Then you will be able to use `gcloud functions deploy` command to deploy your function to Google Cloud."
-msgstr "アプリケーションのビルド後、 `gcloud beta functions deploy` コマンドを使って Google Cloud に関数をデプロイすることができるようになります。"
+msgstr "これで `gcloud beta functions deploy` コマンドを使って Google Cloud に関数をデプロイすることができるようになります。"
 
 #. type: delimited block =
 #: upstream/_guides/gcp-functions.adoc:222
@@ -445,10 +442,10 @@ msgstr "このコマンドを初めて起動したときには、以下のよう
 
 #. type: delimited block -
 #: upstream/_guides/gcp-functions.adoc:225
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "ERROR: (gcloud.beta.functions.deploy) OperationError: code=7, message=Build Failed: Cloud Build has not been used in project <project_name> before or it is disabled. Enable it by visiting https://console.developers.google.com/apis/api/cloudbuild.googleapis.com/overview?project=<my-project> then retry.\n"
 msgid "ERROR: (gcloud.functions.deploy) OperationError: code=7, message=Build Failed: Cloud Build has not been used in project <project_name> before or it is disabled. Enable it by visiting https://console.developers.google.com/apis/api/cloudbuild.googleapis.com/overview?project=<my-project> then retry.\n"
-msgstr "ERROR: (gcloud.beta.functions.deploy) OperationError: code=7, message=Build Failed: Cloud Build has not been used in project <project_name> before or it is disabled. Enable it by visiting https://console.developers.google.com/apis/api/cloudbuild.googleapis.com/overview?project=<my-project> then retry.\n"
+msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:227
@@ -570,7 +567,7 @@ msgstr "以下のコマンドでMaven経由でダウンロードできます。"
 
 #. type: delimited block -
 #: upstream/_guides/gcp-functions.adoc:316
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid ""
 #| "mvn dependency:copy \\\n"
 #| "  -Dartifact='com.google.cloud.functions.invoker:java-function-invoker:1.0.0-beta1' \\\n"
@@ -580,9 +577,6 @@ msgid ""
 "  -Dartifact='com.google.cloud.functions.invoker:java-function-invoker:1.0.2' \\\n"
 "  -DoutputDirectory=.\n"
 msgstr ""
-"mvn dependency:copy \\\n"
-"  -Dartifact='com.google.cloud.functions.invoker:java-function-invoker:1.0.0-beta1' \\\n"
-"  -DoutputDirectory=.\n"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:319
