Add machine translation

--- a/l10n/po/ja_JP/_guides/kogito-dmn.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito-dmn.adoc.po
@@ -279,8 +279,9 @@ msgstr "そして、Decision Requirement Graph (DRG) は次のようになりま
 
 #. type: Plain text
 #: upstream/_guides/kogito-dmn.adoc:132
+#, fuzzy
 msgid "image:kogito-DMN-guide-screenshot-DRG.png[alt=DMN model definition]"
-msgstr ""
+msgstr "image:kogito-DMN-guide-screenshot-DRG.png[alt=DMN model definition]"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dmn.adoc:135
@@ -294,8 +295,9 @@ msgstr "`Base price` Decisionノードの決定ロジックは、以下のエン
 
 #. type: Plain text
 #: upstream/_guides/kogito-dmn.adoc:139
+#, fuzzy
 msgid "image:kogito-DMN-guide-screenshot-DT.png[alt=DMN Decision Table definition]"
-msgstr ""
+msgstr "image:kogito-DMN-guide-screenshot-DT.png[alt=DMN Decision Table definition]"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dmn.adoc:141
