Update .po files

--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-11-24 10:04+0000\n"
+"POT-Creation-Date: 2021-12-15 19:03+0000\n"
 "PO-Revision-Date: 2021-04-30 16:54+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -389,10 +389,15 @@ msgstr "    volatile Tokens currentTokens;\n"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-client.adoc:160
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "    @PostConstruct\n"
+#| "    public init() {\n"
+#| "        currentTokens = client.getTokens().await().indefinitely();\n"
+#| "    }\n"
 msgid ""
 "    @PostConstruct\n"
-"    public init() {\n"
+"    public void init() {\n"
 "        currentTokens = client.getTokens().await().indefinitely();\n"
 "    }\n"
 msgstr ""
