--- a/l10n/po/ja_JP/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.5.3.Final released - Maintenance release'\n"
@@ -34,11 +34,19 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.5.3.Final リリース - メンテナンスリリース'\n"
+"date: 2021-12-15\n"
+"tags: release\n"
+"synopsis: 2.5.3.Finalは、2.5リリーストレインのメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc:11
+#, fuzzy
 msgid "We just released Quarkus 2.5.3.Final, a maintenance release for our 2.5 release train containing bugfixes and documentation improvements."
-msgstr ""
+msgstr "Quarkus 2.5.3.Finalは、バグ修正とドキュメントの改善を含む、Quarkus 2.5リリーストレインのメンテナンスリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc:13
@@ -58,8 +66,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc:19
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.5.3.Final[the full changelog of 2.5.3.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.5.3.Final[2.5.3.Final の全変更履歴は、GitHub でご覧いた]だけます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc:20
