--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kafka-client.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kafka-client.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-14 02:22+0000\n"
+"POT-Creation-Date: 2021-12-16 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -136,7 +136,7 @@ msgstr "string"
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kafka-client.adoc:59
 #, no-wrap
-msgid "`vectorized/redpanda:v21.11.2`"
+msgid "`docker.io/vectorized/redpanda:v21.11.2`"
 msgstr ""
 
 #. type: Table
