Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-container-image-docker.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-container-image-docker.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-12-17 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -55,6 +55,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-container-image-docker.adoc:17
 #: upstream/_generated-config/main/config/quarkus-container-image-docker.adoc:26
 #: upstream/_generated-config/main/config/quarkus-container-image-docker.adoc:44
+#: upstream/_generated-config/main/config/quarkus-container-image-docker.adoc:53
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -93,6 +94,18 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-container-image-docker.adoc:43
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.network]]`link:#quarkus-container-image-docker_quarkus.docker.network[quarkus.docker.network]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-container-image-docker.adoc:52
+#, no-wrap
+msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.executable-name]]`link:#quarkus-container-image-docker_quarkus.docker.executable-name[quarkus.docker.executable-name]`\n"
 "\n"
 "[.description]\n"
@@ -102,13 +115,13 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-container-image-docker.adoc:47
+#: upstream/_generated-config/main/config/quarkus-container-image-docker.adoc:56
 #, no-wrap
 msgid "`docker`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-container-image-docker.adoc:52
+#: upstream/_generated-config/main/config/quarkus-container-image-docker.adoc:61
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.build-args-build-args]]`link:#quarkus-container-image-docker_quarkus.docker.build-args-build-args[quarkus.docker.build-args]`\n"
@@ -120,7 +133,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-container-image-docker.adoc:53
+#: upstream/_generated-config/main/config/quarkus-container-image-docker.adoc:62
 #, no-wrap
 msgid "`Map<String,String>`"
 msgstr ""
