Apply translation memory

--- a/l10n/po/ja_JP/_posts/2021-12-20-upx.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-20-upx.adoc.po
@@ -303,7 +303,7 @@ msgstr ""
 #: upstream/_posts/2021-12-20-upx.adoc:171
 #, no-wrap
 msgid "Summary"
-msgstr ""
+msgstr "概要"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:175
