--- a/l10n/po/ja_JP/_posts/2021-12-20-upx.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-20-upx.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Compressing native executables with UPX'\n"
@@ -34,58 +34,73 @@ msgid ""
 "author: cescoffier\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: UPXによるネイティブな実行ファイルの圧縮」。\n"
+"date: 2021-12-20\n"
+"tags: native feature\n"
+"synopsis: UPXを使ってQuarkusがネイティブの実行ファイルを小さくする方法\n"
+"author: cescoffier\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:14
+#, fuzzy
 msgid "UPX is is an open-source, portable, high-performance *executable packer* initially created in 1996.  It takes an executable as input and produces a compressed executable.  Readers from a _certain_ age may have already used UPX a long time ago when programs needed to be compressed to fit on a floppy disk.  More than 20 years later, UPX is still rocking."
-msgstr ""
+msgstr "UPXは、1996年に開発されたオープンソースのポータブルで高性能な *実行ファイルパッカー*です。UPXは、1996年に開発されたオープンソースのポータブルで高性能な実行ファイルパッカーです。昔、フロッピー・ディスクに収めるためにプログラムを圧縮する必要があった頃、 _ある_年代の読者はすでにUPXを使っていたかもしれません。20年以上経った今でも、UPXは健在です。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:21
+#, fuzzy
 msgid "In Quarkus 2.6, we integrated UPX compression in the Quarkus build.  So, Quarkus can automatically produce a compressed executable.  This post explains how you can use this new feature.  But, before going further, you need to understand that **nothing comes for free**.  The compressed executable is smaller on disk, but its memory usage is higher.  So make sure to read the \"big warning\" section before using it."
-msgstr ""
+msgstr "Quarkus 2.6では、UPX圧縮をQuarkusのビルドに統合しました。これにより、Quarkusは自動的に圧縮された実行ファイルを作成することができます。この記事では、この新機能の使い方を説明します。しかし、先に進む前に、 *無料で手に入るものはない*ということを理解しておく必要があります。圧縮された実行ファイルは、ディスク上では小さくなりますが、メモリ使用量は多くなります。そのため、使用する前に必ず「大きな警告」の項目をお読みください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-20-upx.adoc:22
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Getting you ready"
-msgstr ""
+msgstr "準備"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:25
+#, fuzzy
 msgid "Quarkus can compress your executable if you have installed UPX on your system or use an in-container build."
-msgstr ""
+msgstr "システムにUPXがインストールされているか、インコンテナビルドを使用している場合、Quarkusは実行ファイルを圧縮できます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:30
+#, fuzzy
 msgid "UPX is available on most operating systems.  So, you should be able to download it from https://github.com/upx/upx/releases/tag/v3.96[their release page].  UPX is cross-platform.  So you can compress a Linux 64 bits executable even from a macOS or Windows machine."
-msgstr ""
+msgstr "UPXはほとんどのOSで利用できます。そのため、 link:https://github.com/upx/upx/releases/tag/v3.96[リリースページ]からダウンロードできるはずです。UPXはクロスプラットフォームです。そのため、macOSやWindowsマシンからでも、Linux 64ビットの実行ファイルを圧縮することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:36
+#, fuzzy
 msgid "If installing UPX is not an option for you, you can ask Quarkus to build your native executable using an in-container build (with `-Dquarkus.native.container-build=true`).  You will get a Linux 64 bits executable (perfect for containers but unusable from your machine if you don't use Linux).  The in-container build provides UPX so that it can compress the executable.  When using an in-container build, you don't need GraalVM or UPX on your machine.  This option is particularly interesting on CI."
-msgstr ""
+msgstr "UPXをインストールすることができない場合は、Quarkusにインコンテナビルド（ `-Dquarkus.native.container-build=true` ）を使用してネイティブの実行ファイルをビルドするように依頼することができます。Linux 64ビットの実行ファイルが得られます（コンテナには最適ですが、Linuxを使用していない場合は自分のマシンからは使用できません）。インコンテナ・ビルドでは、実行ファイルを圧縮できるように UPX を提供しています。インコンテナ・ビルドを使用する場合は、あなたのマシンにGraalVMやUPXは必要ありません。このオプションは、特にCI上で興味深いものです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:38
+#, fuzzy
 msgid "In this post, we will use the first approach. The https://quarkus.io/version/main/guides/building-native-image#creating-a-container[Building a Native Executable] page explains how to use in-container build."
-msgstr ""
+msgstr "この記事では、最初のアプローチを使用します。 link:https://quarkus.io/version/main/guides/building-native-image#creating-a-container[ネイティブ実行ファイルの構築]」のページでは、インコンテナ・ビルドを使用する方法を説明しています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-20-upx.adoc:39
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Let's get something to compress"
-msgstr ""
+msgstr "圧縮するものを用意しよう"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:44
+#, fuzzy
 msgid "First, we need an application.  To keep things simple, let's create a new application from https://code.quarkus.io/?a=upx-compression-demo&e=resteasy-reactive-jacksoncode.quarkus.io.  This application uses RESTEasy Reactive and its Jackson support, but the compression works with any project, and we won't even look at the code."
-msgstr ""
+msgstr "まず、アプリケーションが必要です。簡単にするために、 https://code.quarkus.io/?a=upx-compression-demo&amp;e=resteasy-reactive-jacksoncode.quarkus.io  から新しいアプリケーションを作ってみましょう。このアプリケーションはRESTEasy ReactiveとそのJacksonサポートを使用していますが、圧縮はどのようなプロジェクトでも機能するので、コードを見ることもしません。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:47
+#, fuzzy
 msgid "Before using UPX, we need to measure the disk space and memory usage of the non-compressed native executable.  To do that, we need the native executable:"
-msgstr ""
+msgstr "UPX を使用する前に、圧縮されていないネイティブの実行ファイルのディスク容量とメモリ使用量を測定する必要があります。そのためには、ネイティブの実行ファイルが必要です。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-12-20-upx.adoc:51
@@ -95,8 +110,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:54
+#, fuzzy
 msgid "The resulting executable use ~46 MB of disk space:"
-msgstr ""
+msgstr "結果として、実行ファイルは46MBのディスクスペースを使用します。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-12-20-upx.adoc:58
@@ -106,8 +122,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:62
+#, fuzzy
 msgid "Now, let's have a look at the memory consumption.  Start the application using:"
-msgstr ""
+msgstr "では、メモリの消費量を見てみましょう。を使ってアプリケーションを起動します。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-12-20-upx.adoc:66
@@ -118,8 +135,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:69
+#, fuzzy
 msgid "In another terminal, invoke the application using curl and gets its memory usage:"
-msgstr ""
+msgstr "別の端末で、curlを使ってアプリケーションを起動し、そのメモリ使用量を取得します。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-12-20-upx.adoc:75
@@ -141,13 +159,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:82
+#, fuzzy
 msgid "So, it takes 21 MB of https://en.wikipedia.org/wiki/Resident_set_size[RSS], basically the amount of RAM it uses."
-msgstr ""
+msgstr "そのため、基本的には使用するRAMの量である21MBの link:https://en.wikipedia.org/wiki/Resident_set_size[RSS]を使用します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:84
+#, fuzzy
 msgid "The `rss` command is the following function:"
-msgstr ""
+msgstr "`rss` コマンドは以下の機能です。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-12-20-upx.adoc:90
@@ -160,39 +180,45 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:93
+#, fuzzy
 msgid "Check https://quarkus.io/guides/performance-measure[Quarkus - Measuring Performance] to learn more about RSS and how to measure it"
-msgstr ""
+msgstr "RSSとその測定方法については、 link:https://quarkus.io/guides/performance-measure[Quarkus - Measuring Performance]をご覧ください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-20-upx.adoc:94
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Configuring the compression"
-msgstr ""
+msgstr "圧縮を設定する"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:98
+#, fuzzy
 msgid "To compress your executable, you need to configure the compression level.  The compression goes from 1 to 10:"
-msgstr ""
+msgstr "実行ファイルを圧縮するには、圧縮レベルを設定する必要があります。圧縮率は1から10まであります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:100
+#, fuzzy
 msgid "`1`: faster compression"
-msgstr ""
+msgstr "`1`: より速い圧縮"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:101
+#, fuzzy
 msgid "`9`: better compression"
-msgstr ""
+msgstr "`9`: より良い圧縮"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:102
+#, fuzzy
 msgid "`10`: best compression (can be slow for big files)"
-msgstr ""
+msgstr "`10`: 最高の圧縮率（大きなファイルでは遅い場合があります。）"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:104
+#, fuzzy
 msgid "Configure the level from the `application.properties` file:"
-msgstr ""
+msgstr "`application.properties` ファイルからレベルを設定します。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-12-20-upx.adoc:108
@@ -202,19 +228,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:111
+#, fuzzy
 msgid "That's all you need to do to enable the compression."
-msgstr ""
+msgstr "これだけで圧縮が有効になります。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-20-upx.adoc:112
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Building the compressed native executable"
-msgstr ""
+msgstr "圧縮されたネイティブな実行ファイルの構築"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:115
+#, fuzzy
 msgid "Let's regenerate the native executable. This time, because of the configured compression level, Quarkus will compress it:"
-msgstr ""
+msgstr "ネイティブの実行ファイルを再生成してみましょう。今回は、設定された圧縮レベルのため、Quarkusが圧縮します。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-12-20-upx.adoc:125
@@ -246,8 +274,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:134
+#, fuzzy
 msgid "As you can see, this time, it runs UPX to compress the native executable. If you check the size, you should get something around 15 MB:"
-msgstr ""
+msgstr "ご覧の通り、今回はUPXを実行してネイティブの実行ファイルを圧縮しています。サイズを確認すると、15MB前後のものが出てくるはずです。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-12-20-upx.adoc:138
@@ -257,29 +286,33 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:141
+#, fuzzy
 msgid "So we went from 46 M to 15 M; this is a considerable gain, even if it still does not fit on a floppy disk."
-msgstr ""
+msgstr "これは、フロッピーディスクに収まらないとはいえ、かなりの収穫です。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-20-upx.adoc:142
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The **BIG** warning"
-msgstr ""
+msgstr "*大*予告"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:147
+#, fuzzy
 msgid "However, as said in the introduction, nothing comes for free.  Earlier, we also measured the memory usage of the uncompressed executable (21 MB).  Let's compare with the compressed executable."
-msgstr ""
+msgstr "しかし、冒頭で述べたように、タダで手に入るものはありません。先ほど、圧縮されていない実行ファイルのメモリ使用量（21MB）も測定しました。圧縮した実行ファイルと比較してみましょう。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:149
+#, fuzzy
 msgid "Run the application with:"
-msgstr ""
+msgstr "でアプリケーションを実行します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:156
+#, fuzzy
 msgid "And, in another terminal, run:"
-msgstr ""
+msgstr "そして、別の端末で、実行する。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-12-20-upx.adoc:165
@@ -292,12 +325,12 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:170
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "**57 MB**! So, it uses ~2.7 times more RSS than the uncompressed executable. \n"
 "This overhead is because the compressed executable must unpack the program on startup and store it in memory. \n"
 "It can also increase the startup time, but this startup overhead is insignificant most of the time. \n"
-msgstr ""
+msgstr "*57MB*!つまり、圧縮されていない実行ファイルに比べて2.7倍ものRSSを使用していることになります。このオーバーヘッドは、圧縮された実行ファイルが起動時にプログラムを解凍してメモリに格納しなければならないためです。また、起動時間が長くなることもありますが、この起動時のオーバーヘッドはほとんどの場合、重要ではありません。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-20-upx.adoc:171
@@ -307,15 +340,18 @@ msgstr "概要"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:175
+#, fuzzy
 msgid "UPX lets you compress your native executables.  In Quarkus 2.6, you only need to configure the compression level, and voilà, it compresses it for you."
-msgstr ""
+msgstr "UPXを使用すると、ネイティブの実行ファイルを圧縮することができます。Quarkus 2.6では、圧縮レベルを設定するだけで、自動的に圧縮してくれます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:178
+#, fuzzy
 msgid "However, do not think it all comes for free.  While the gain on disk space is fantastic, do not ignore the RSS overhead."
-msgstr ""
+msgstr "しかし、すべてが無料で手に入るとは思わないでください。ディスクスペースの増加は素晴らしいものですが、RSSのオーバーヘッドを無視してはいけません。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-upx.adoc:181
+#, fuzzy
 msgid "UPX compression can benefit CLI tools or environments where disk space is a constrained resource.  For long-running applications or microservices, the RSS overhead reduces the deployment density.  So, if the storage is not a problem or if the density of deployment is crucial for you, better not compress your executable."
-msgstr ""
+msgstr "UPXの圧縮は、CLIツールや、ディスク・スペースが限られたリソースである環境にメリットをもたらします。長時間稼働するアプリケーションやマイクロサービスでは、RSSのオーバーヘッドがデプロイメント密度を低下させます。そのため、ストレージに問題がない場合や、デプロイの密度が重要な場合は、実行ファイルを圧縮しない方がよいでしょう。"
