--- a/l10n/po/ja_JP/_versions/main/guides/redis.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/redis.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-10 02:16+0000\n"
+"POT-Creation-Date: 2021-12-19 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1121,8 +1121,13 @@ msgid ""
 "ReactiveRedisClient namedReactiveRedisClient = ReactiveRedisClient.createClient(\"second\");\n"
 msgstr ""
 
-#. type: Title ==
+#. type: Plain text
 #: upstream/_versions/main/guides/redis.adoc:619
+msgid "Please see also <<redis-reference.adoc#custom_redis_commands,How to use custom Redis Commands>>."
+msgstr ""
+
+#. type: Title ==
+#: upstream/_versions/main/guides/redis.adoc:621
 #, no-wrap
 msgid "Configuration Reference"
 msgstr "設定リファレンス"
