Update .po files

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-10 17:16+0000\n"
+"POT-Creation-Date: 2021-12-20 14:11+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -13316,7 +13316,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-all-config.adoc:6840
 #, no-wrap
-msgid "`vectorized/redpanda:v21.5.5`"
+msgid "`docker.io/vectorized/redpanda:v21.5.5`"
 msgstr ""
 
 #. type: Table
@@ -14110,7 +14110,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-all-config.adoc:7334
 #, no-wrap
-msgid "`apicurio/apicurio-registry-mem:2.1.3.Final`"
+msgid "`docker.io/apicurio/apicurio-registry-mem:2.1.3.Final`"
 msgstr ""
 
 #. type: Table
