--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-kafka-client-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-kafka-client-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-31 13:10+0000\n"
+"POT-Creation-Date: 2021-12-20 14:10+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -99,7 +99,7 @@ msgstr "string"
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kafka-client-general-config-items.adoc:39
 #, no-wrap
-msgid "`vectorized/redpanda:v21.5.5`"
+msgid "`docker.io/vectorized/redpanda:v21.5.5`"
 msgstr ""
 
 #. type: Table
