Add machine translation

--- a/l10n/po/ja_JP/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.5.4.Final released - Maintenance release'\n"
@@ -34,11 +34,19 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.5.4.Final released - Maintenance release'\n"
+"date: 2021-12-20\n"
+"tags: release\n"
+"synopsis: 2.5.4.Finalは、2.5リリーストレインのメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc:11
+#, fuzzy
 msgid "We just released Quarkus 2.5.4.Final, a maintenance release for our 2.5 release train containing bugfixes and documentation improvements."
-msgstr ""
+msgstr "Quarkus 2.5.4.Finalがリリースされました。このリリースは、2.5リリーストレインのメンテナンスリリースで、バグフィックスとドキュメントの改善が含まれています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc:13
@@ -52,36 +60,39 @@ msgstr "まだ2.5を使用していない場合は、 link:https://github.com/qu
 
 #. type: Title ==
 #: upstream/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc:16
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Main changes"
-msgstr ""
+msgstr "主な変更点"
 
 #. type: Title ===
 #: upstream/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc:18
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Jackson 2.12.6"
-msgstr ""
+msgstr "ジャクソン 2.12.6"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc:21
+#, fuzzy
 msgid "We upgraded to Jackson 2.12.6 to fix https://github.com/FasterXML/jackson-databind/issues/3328[a security issue in Jackson Databind]."
-msgstr ""
+msgstr "Jackson 2.12.6にアップグレードし、 link:https://github.com/FasterXML/jackson-databind/issues/3328[Jackson Databindのセキュリティ問題]を修正しました。"
 
 #. type: Title ===
 #: upstream/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc:22
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Platform resolution fix"
-msgstr ""
+msgstr "プラットフォーム解像度の修正"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc:26
+#, fuzzy
 msgid "An issue has been fixed regarding how the platforms are resolved in the dev tools.  This issue could cause code.quarkus.io do go out of memory when creating projects with high number of extensions."
-msgstr ""
+msgstr "開発ツールでのプラットフォームの解決方法に関する問題が修正されました。この問題により、拡張機能の数が多いプロジェクトを作成すると、code.quarkus.ioがメモリ不足になることがありました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc:29
+#, fuzzy
 msgid "If you are running your own instance of https://github.com/quarkusio/code.quarkus.io[code.quarkus.io] internally, you will want to update to this version to avoid issues."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/code.quarkus.io[code.quarkus.io]の独自のインスタンスを内部で実行している場合は、問題を回避するためにこのバージョンにアップデートすることをお勧めします。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc:30
@@ -91,8 +102,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc:33
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.5.4.Final[the full changelog of 2.5.4.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.5.4.Final[2.5.4.Finalの完全な変更履歴はGitHubに]掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-20-quarkus-2-5-4-final-released.adoc:34
