Add machine translation

--- a/l10n/po/ja_JP/_guides/jms.adoc.po
+++ b/l10n/po/ja_JP/_guides/jms.adoc.po
@@ -585,8 +585,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:338
+#, fuzzy
 msgid "'''"
-msgstr ""
+msgstr "'''"
 
 #. type: Title ==
 #: upstream/_guides/jms.adoc:341
