--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-dev-service-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-dev-service-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-21 02:21+0000\n"
+"POT-Creation-Date: 2021-12-22 02:24+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -119,7 +119,27 @@ msgid "string"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-dev-service-build-time-config.adoc:51
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-dev-service-build-time-config.adoc:52
 #, no-wrap
 msgid "`infinispan`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-dev-service-build-time-config.adoc:59
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-infinispan-client-infinispan-client-dev-service-build-time-config_quarkus.infinispan-client.devservices.artifacts]]`link:#quarkus-infinispan-client-infinispan-client-dev-service-build-time-config_quarkus.infinispan-client.devservices.artifacts[quarkus.infinispan-client.devservices.artifacts]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"List of the artifacts to automatically download and add to the Infinispan server libraries. \n"
+" For example a Maven coordinate (org.postgresql:postgresql:42.3.1) or a dependency location url. \n"
+" If an invalid value is passed, the Infinispan server will throw an error when trying to start.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-dev-service-build-time-config.adoc:60
+#, no-wrap
+msgid "list of string"
 msgstr ""
